==> XuanSama02/STM32H750_POLARIS_BSP/Drivers/SYSTEM/USART/usart.c <==
#include "usart.h"

//如果使用OS,则包括下面的头文件即可
#if SYSTEM_SUPPORT_OS
    #include "includes.h"  //OS支持
#endif

//加入以下代码,支持printf函数,而不需要选择use MicroLIB
//#pragma import(__use_no_semihosting)

//标准库需要的支持函数
struct __FILE
{
    int handle;
};

FILE __stdout;

//定义_sys_exit()以避免使用半主机模式
void _sys_exit(int x)
{
    x = x;
}
//重定义fputc函数
int fputc(int ch, FILE *f)
{
    while((USART1->ISR&0X40) == 0);  //循环发送,直到发送完毕
    USART1->TDR = (u8)ch;
    return ch;
}

#if EN_USART1_RX  //如果使能了接收
//串口1中断服务程序
//注意,读取USARTx->SR能避免莫名其妙的错误
u8 USART_RX_BUF[USART_REC_LEN];   //接收缓冲,最大USART_REC_LEN个字节

//接收状态
//bit15,    接收完成标志
//bit14,    接收到0x0d
//bit13~0,  接收到的有效字节数目
u16 USART_RX_STA = 0;  //接收状态标记	

u8 aRxBuffer[RXBUFFERSIZE];       //HAL库使用的串口接收缓冲
UART_HandleTypeDef UART1_Handler; //UART句柄

/**
 * @brief 初始化串口1
 * 
 * @param baud_rate 波特率
 */
void uart1_init(u32 baud_rate)
{
    //UART初始化设置
    UART1_Handler.Instance        = USART1;               //USART1
    UART1_Handler.Init.BaudRate   = baud_rate;            //波特率
    UART1_Handler.Init.WordLength = UART_WORDLENGTH_8B;   //字长为8位数据格式
    UART1_Handler.Init.StopBits   = UART_STOPBITS_1;      //一个停止位
    UART1_Handler.Init.Parity     = UART_PARITY_NONE;     //无奇偶校验位
    UART1_Handler.Init.HwFlowCtl  = UART_HWCONTROL_NONE;  //无硬件流控
    UART1_Handler.Init.Mode       = UART_MODE_TX_RX;      //收发模式
    HAL_UART_Init(&UART1_Handler);                        //此函数同时会使能UART1
    
    HAL_UART_Receive_IT(&UART1_Handler, (u8 *)aRxBuffer, RXBUFFERSIZE);  //该函数会开启接收中断:标志位UART_IT_RXNE,并且设置:接收缓冲,接收缓冲的接收最大数据量
}

/**
 * @brief UART底层初始化,时钟使能,引脚配置,中断配置
 * 
 * @param huart uart句柄
 */
void HAL_UART_MspInit(UART_HandleTypeDef *huart)
{
    GPIO_InitTypeDef ymx_gpio_init;

    if(huart->Instance == USART1)  //如果是串口1,进行串口1的MSP初始化
    {
        //开启时钟
        __HAL_RCC_GPIOA_CLK_ENABLE();                    //使能GPIOA时钟
        __HAL_RCC_USART1_CLK_ENABLE();                   //使能USART1时钟
        //配置GPIO_PA9(TX)
        ymx_gpio_init.Pin       = GPIO_PIN_9;            //PA9
        ymx_gpio_init.Mode      = GPIO_MODE_AF_PP;       //复用推挽输出
        ymx_gpio_init.Pull      = GPIO_PULLUP;           //上拉
        ymx_gpio_init.Speed     = GPIO_SPEED_FREQ_HIGH;  //高速
        ymx_gpio_init.Alternate = GPIO_AF7_USART1;       //复用为USART1
        HAL_GPIO_Init(GPIOA, &ymx_gpio_init);            //初始化PA9
        //配置GPIO_PA10(RX)
        ymx_gpio_init.Pin       = GPIO_PIN_10;           //PA10
        HAL_GPIO_Init(GPIOA, &ymx_gpio_init);            //初始化PA10
    #if EN_USART1_RX
            HAL_NVIC_EnableIRQ(USART1_IRQn);             //使能USART1中断通道
            HAL_NVIC_SetPriority(USART1_IRQn, 3, 3);     //抢占优先级3，子优先级3
    #endif
    }
}

void HAL_UART_RxCpltCallback(UART_HandleTypeDef *huart)
{
    if(huart->Instance==USART1)//如果是串口1
    {
        if((USART_RX_STA&0x8000) == 0)//接收未完成
        {
            if(USART_RX_STA&0x4000)  //接收到了0x0d
            {
                if(aRxBuffer[0] != 0x0a)  //接收错误,重新开始
                    USART_RX_STA = 0;
                else                      //接收完成了
                    USART_RX_STA |= 0x8000;
            }
            else                     //还没收到0X0D
            {
                if(aRxBuffer[0] == 0x0d)
                    USART_RX_STA |= 0x4000;
                else
                {
                    USART_RX_BUF[USART_RX_STA&0X3FFF] = aRxBuffer[0];
                    USART_RX_STA++;
                    if(USART_RX_STA > (USART_REC_LEN-1))  //接收数据错误,重新开始接收
                        USART_RX_STA = 0;
                }
            }
        }
    }
}

void USART1_IRQHandler(void)                	
{ 
    u32 timeout  = 0;
    u32 maxDelay = 0x1FFFF;
#if SYSTEM_SUPPORT_OS  //使用OS
    OSIntEnter();
#endif
    HAL_UART_IRQHandler(&UART1_Handler);  //调用HAL库中断处理公用函数
    timeout=0;
    while (HAL_UART_GetState(&UART1_Handler) != HAL_UART_STATE_READY)  //等待就绪
    {
        timeout++;  //超时处理
        if(timeout > maxDelay)
            break;
    }

    timeout=0;
    while(HAL_UART_Receive_IT(&UART1_Handler, (u8 *)aRxBuffer, RXBUFFERSIZE) != HAL_OK)  //一次处理完成之后,重新开启中断并设置RxXferCount为1
    {
        timeout++;  //超时处理
        if(timeout > maxDelay)
            break;
    }

#if SYSTEM_SUPPORT_OS  //使用OS
    OSIntExit();
#endif
}

#endif /*EN_USART1_RX*/
